# notifications-service

./: pyproject.toml
src/app/application/dto/: send_email_notification_request_dto.py  send_message_notification_request_dto.py
src/app/application/interfaces/: interactor.py
src/app/application/usecases/: send_email_notification_usecase.py  send_message_notification_usecase.py
src/app/domain/common/: entity.py
src/app/domain/entities/: email_notify_entity.py  message_notify_entity.py
src/app/domain/repositories/: email_notify_repository.py  message_notify_repository.py
src/app/domain/value_objects/: notify_uuid_value_object.py
src/app/domain/value_objects/email_notify/: email_content_value_object.py  email_sended_at_value_object.py  email_subject_value_object.py  email_value_object.py
src/app/domain/value_objects/message_notify/: message_content_value_object.py  message_sended_at_value_object.py  phone_number_value_object.py
src/app/infrastructure/broker/: config.py  main.py
src/app/infrastructure/logging/: setup_logging.py
