[tool.poetry]
name = "notifications-service"
version = "0.1.0"
description = ""
authors = ["NxtaSunstrike <unixalle765@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faststream = "^0.5.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
